--- a/PluginLoadTest/app.config
+++ b/PluginLoadTest/app.config
@@ -2,7 +2,7 @@
 <configuration>
   <specFlow>
     <plugins>
-      <add name="MyPlugin" path=".\bin\Debug"></add>
+      <add name="MyPlugin" path="..\MyPlugin.SpecFlowPlugin\bin\Debug"></add>
     </plugins>
   </specFlow>
 </configuration>
